Updated the notebook for the simplest Gen A

--- a/LangGraph_datalab_02.ipynb
+++ b/LangGraph_datalab_02.ipynb
@@ -5,11 +5,21 @@
    "id": "bbf4adfc-e37c-4dc2-a37e-13fac3006236",
    "metadata": {},
    "source": [
-    "# This is a workbook to explore LangGraph\n",
-    "#### Used as resource: https://www.datacamp.com/tutorial/langgraph-tutorial\n",
-    "#### Must update pip to get the installs to be compatible with each other\n",
-    "#### It works on Datalab. Reconfiguring will be needed for use on other platform.\n",
-    "#### Created Sept 15, 2025"
+    "# This is a workbook to explore LangGraph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d4dff09-2608-4fef-a155-5857a82c24f4",
+   "metadata": {},
+   "source": [
+    "This workbook creates a very basic Gen AI agent using OpenAI's gpt-5-nano model because it's super cheap to use while learning.\n",
+    "\n",
+    "Notes\n",
+    "- Must update pip to get the installs to be compatible with each other\n",
+    "- This notebook was written and executed in Datalab. Reconfiguring will be needed for use on other platform.\n",
+    "- You need to have your own credentials and an open account, with money in it, on OpenAI.com (https://platform.openai.com/usage)\n",
+    "- Created Sept 15, 2025"
    ]
   },
   {
@@ -373,6 +383,14 @@
     "    print(f\"API Key: present\")\n",
     "else:\n",
     "    print(\"API key not found in environment variables.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f543d6-43bf-44a0-8099-e06341bc8cce",
+   "metadata": {},
+   "source": [
+    "# Create an AI Agent"
    ]
   },
   {
