Updated topic definition

--- a/Eg05_ResearchAgent.ipynb
+++ b/Eg05_ResearchAgent.ipynb
@@ -40,6 +40,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "f42342a9-95f9-42e1-a79c-50038670b80a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell 2\n",
+    "# Define the topic of the report\n",
+    "topic = \"The benefits of using a data fabric architecture\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "1e0f4ced-8930-4581-90aa-57e2688f58db",
    "metadata": {},
@@ -282,7 +294,7 @@
     "# Cell 10\n",
     "# Input\n",
     "max_analysts = 3 \n",
-    "topic = \"The benefits of using a data fabric architecture\"\n",
+    "# topic is defined above\n",
     "thread = {\"configurable\": {\"thread_id\": \"1\"}}\n",
     "\n",
     "# Run the graph until the first interruption\n",
